--- a/style.css
+++ b/style.css
@@ -1,14 +1,37 @@
 body{
 	text-align: center;
-	background-color: black;
+	background-color: #214154;
 	color: white;
 	font-size: 25;
-	line-height: 1.2;
+	line-height: 1.3;
 }
 a, a:link, a:visited, a:active {
-	color: white;
+	color: #FEFECC;
 	text-decoration: none;
 }
-a:hover{
+a:hover
+{
 	color: yellow;
+}
+
+.container
+{
+	background-color: #2F6380;
+	background-color: #255067;
+	width: 95%;
+	min-height: 100%;
+	margin: auto;
+}
+.upperChangingText
+{
+	display: block;
+	height: 100px;
+	font-family: Comic sans MS;
+}
+.content{
+	clear: both;
+	font-family: Helvetica, Arial, sans-serif;
+}
+p{
+	font-family: Palatino, Verdana, Arial, sans-serif;
 }
